<resources>
    <string name="app_name">Travel Pet</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_sair">Sair</string>

    <string name="menu_viagem">Viagem</string>
    <string name="menu_pagamento">Pagamento</string>
    <string name="menu_configuracao">Configuração</string>
    <string name="menu_info">Info</string>
    <string name="menu_meus_animais">Meus Animais</string>
    <string name="descricao">Os donos de animais têm por muitas vezes transportar seu animal para
        diferentes locais ou comércios especializados. Com o crescente aumento do mercado pet, seu
        transporte se torna escasso por falta de motoristas que permitam este transporte e veículos
        despreparados para o mesmo. A ideia e propor um aplicativo que gerencie uma viagem de um
        animal e forneça segurança e agilidade neste tipo de transporte.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_viagem">ViagemActivity</string>
    <string name="por_favor_preencha_os_campos_com_os_dados_de_seu_veiculo">Por favor preencha os campos com os dados de seu veículo</string>
    <string name="marca_do_ve_culo">Marca do Veículo</string>
    <string name="ano_ve_culo">Ano Veículo</string>
    <string name="placa_do_ve_culo">Placa do Veículo</string>
    <string name="modelo_do_veiculo">Modelo do Veículo</string>
    <string name="crlv_do_ve_culo">CRLV do Veículo</string>
    <string name="dono_de_animal">Dono de Animal</string>
    <string name="conte_mais">Conte-nos mais sobre seu animal, necessidade especial ou comportamento:</string>
    <string name="observacoes">Ex: Animal possui dificuldade locomotora.</string>
    <string name="proximo">Próximo</string>
    <string name="por_favor_selecione">Por favor selecione a espécie do seu animal:</string>
    <string name="sao_bernardo">Ex: São Bernardo</string>
    <string name="raca_do_animal">Por favor Digite a raça do seu animal:</string>
    <string name="Enviar_foto_animal">Envie uma foto do seu animal</string>
    <string name="camera">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="finalizar">Finalizar</string>
    <string name="caracteristicas_animal">Agora nós precisamos recolher algumas características do seu animal de estimação :)</string>
    <string name="digite_o_nome_animal">Por favor digite o nome do seu animal:</string>
    <string name="pequeno_at_35cm">Pequeno - Até 35cm</string>
    <string name="medio_de_36_a_49cm">Médio - De 36 a 49cm</string>
    <string name="grande_acima_de_50cm">Grande - Acima de 50cm</string>
    <string name="selecione_porte_animal">Por favor selecione a porte do seu animal:</string>
    <string name="envie_uma_foto_da_sua_carteira_de_habilitacao">Envie uma foto da sua carteira de habilitação</string>
    <string name="n_de_registro_cnh">Nº de registro CNH</string>
    <string name="nenhum_arquivo_selecionado">Nenhum arquivo selecionado</string>
    <string name="enviar_foto">Enviar foto</string>
    <string name="texto_activity_cadastro_motorista">Lembre-se, é preciso que o documento: \n\n1. Esteja aberto; \n2. Tenha todos os campos visíveis; \n3. Tenha a observação Exerce Atividade Remunerada (EAR).\n\nObs: a Permissão para Dirigir não é válida.</string>
    <string name="texto_activity_cadastro_motorista_2">1) A foto mostre o documento inteiro. \n2) Todos os campos estejam legíveis. \n3) A categoria do veículo conste como Particular.</string>
    <string name="envie_uma_foto_do_registro_do_seu_veiculo_crlv">Envie uma foto do registro do seu veículo (CRLV)</string>
    <string name="requisitos_da_foto_perfil_motorista">1. Mostre o rosto todo e a parte de cima dos ombros \n2. Não use óculos escuros nem chapéu \n3. Tire a foto em um local bem iluminado</string>
    <string name="envie_uma_foto_sua_de_perfil">Envie uma foto sua de perfil</string>
    <string name="consentimento_legal">Consentimento legal</string>
    <string name="declaracao_de_checagem">Declaração de checagem de antecedentes Ao clicar aqui e submeter o formulário de cadastro, eu concordo com a coleta e processamento dos meus dados pessoais pela Travel Pet ou por seus prestadores de serviço, incluindo dados sensíveis, com o objetivo de avaliar minha elegibilidade para usar ou continuar usando a plataforma da Travel Pet e para outros fins descritos na Declaração de Privacidade do Motorista. Declaro, ainda, a veracidade e a autenticidade de todas as informações e documentos submetidos à Travel Pet para fins de cadastro.</string>
    <string name="eu_aceito_os_termos">Eu aceito os termos</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome">Nome</string>
    <string name="por_favor_preencha_os_campos_com_seus_dados">Por favor preencha os campos com seus dados</string>
    <string name="cep">CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="qual_tipo_de_usuario_voc_pretende_ser">Qual tipo de usuario você pretende ser ?</string>
    <string name="passageiro">Passageiro</string>
    <string name="motorista">Motorista</string>
    <string name="nome_">Nome:</string>
    <string name="nome_do_animal">Nome do Animal</string>
    <string name="porte_">Porte:</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="observacoes_">Observações...</string>
    <string name="login">Login</string>
    <string name="sair">sair</string>
    <string name="especie_">Especie:</string>
    <string name="raca_">Raca:</string>
    <string name="fusca">Fusca</string>
    <string name="volkswagen">Volkswagen</string>
    <string name="rkl_2890">RKL-2890</string>
    <string name="placaveiculo">PLACAVEICULO</string>
    <string name="modeloveiculo">MODELOVEICULO</string>
    <string name="marcaveiculo">MARCAVEICULO</string>
    <string name="androchunk">Androchunk</string>
    <string name="cancelar_viagem">Cancelar Viagem</string>
    <string name="procurando_motorista">Procurando Motorista</string>
    <string name="bairro_destino">Bairro Destino</string>
    <string name="numero_destino">Número Destino</string>
    <string name="rua_destino">Rua Destino</string>
    <string name="endereco_de_destino">Endereço de Destino</string>
    <string name="cep_origem">Cep Origem</string>
    <string name="estado_origem">Estado Origem</string>
    <string name="cidade_origem">Cidade Origem</string>
    <string name="bairro_origem">Bairro Origem</string>
    <string name="numero_origem">Número Origem</string>
    <string name="rua_origem">Rua Origem</string>
    <string name="endereco_de_origem">Endereço de Origem</string>
    <string name="solicitaco_de_viagem">Solicitação de Viagem</string>
    <string name="cidade_destino">Cidade Destino</string>
    <string name="estado_destino">Estado Destino</string>
    <string name="cep_destino">Cep Destino</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">cancelar</string>
    <string name="if_set_the_text_view_will_include_its_current_complete_text_inside_of_its_frozen_icicle_in_addition_to_meta_data_such_as_the_current_cursor_position">If set, the text view will include its current complete text inside of its frozen icicle in addition to meta-data such as the current cursor position.</string>
    <string name="textview">TextView</string>
    <string name="aceitar">Aceitar</string>
    <string name="recusar">Recusar</string>
    <string name="animal_1">ANIMAL 1</string>
    <string name="animal_2">ANIMAL 2</string>
    <string name="animal_3">ANIMAL 3</string>
    <string name="cadastrando_novo_veiculo">Cadastrando Novo Veículo</string>
    <string name="enviar_foto_crvl">Enviar foto CRVL</string>
    <string name="cadastrar_veiculo">Cadastrar Veículo</string>
    <string name="cpf_do_usuario">cpf do Usuario</string>
    <string name="nome_do_usuario">nome do Usuario</string>
    <string name="cpf_">CPF:</string>
    <string name="modelo">Modelo:</string>
    <string name="marca">Marca:</string>
    <string name="ano">Ano:</string>
    <string name="crvl">CRVL:</string>
    <string name="status">Status</string>
    <string name="status_">Status:</string>
    <string name="digite_o_local_de_destino">Para onde você quer ir?</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="seu_local_atual_ou_digite_um_local_de_origem">Onde você está?</string>
    <string name="selecionar">Selecionar</string>
    <string name="selecione_at_3_animais_para_a_viagem">Selecione até 3 animais para a viagem</string>
    <string name="pequeno">Pequeno</string>
    <string name="selecione_os_portes_dos_animais_que_deseja_transportar">Selecione os portes dos animais que deseja transportar</string>
    <string name="medio">Médio</string>
    <string name="grande">Grande</string>
    <string name="selecione_o_veiculo_que_ira_utilizar">Selecione o veículo que irá utilizar</string>
    <string name="confirmar_disponibilidade">CONFIRMAR DISPONIBILIDADE</string>
    <string name="carregando">Carregando...</string>
    <string name="texto_login">Por favor, entre com a sua conta Google.</string>
    <string name="requisitos_da_foto">Requisitos da foto:</string>

    <!-- Spinner Estados -->
    <string-array name="estados">
        <item>"AC"</item>
        <item>"AL"</item>
        <item>"AP"</item>
        <item>"AM"</item>
        <item>"BA"</item>
        <item>"CE"</item>
        <item>"DF"</item>
        <item>"ES"</item>
        <item>"GO"</item>
        <item>"MA"</item>
        <item>"MT"</item>
        <item>"MS"</item>
        <item>"MG"</item>
        <item>"PA"</item>
        <item>"PB"</item>
        <item>"PR"</item>
        <item>"PE"</item>
        <item>"PI"</item>
        <item>"RJ"</item>
        <item>"RN"</item>
        <item>"RS"</item>
        <item>"RO"</item>
        <item>"RR"</item>
        <item>"SC"</item>
        <item>"SP"</item>
        <item>"SE"</item>
        <item>"SO"</item>
    </string-array>

    <!-- Texto das notas Avaliação -->
    <string name="muito_ruim">Muito Ruim</string>
    <string name="ruim">Ruim</string>
    <string name="regular">Regular</string>
    <string name="bom">Bom</string>
    <string name="muito_bom">Muito Bom</string>

    <!-- Texto de como Transportar Animais-->
    <string name="porte_pequeno_medio">Para maior segurança, animais de porte pequeno e médio devem ser transportados em caixas de transporte colocadas atrás do banco do motorista na parte inferior.</string>
    <string name="porte_grande">Para maior segurança, animais de porte grande devem ser transportados em carros adaptados com grades de segurança bem fixadas.</string>


</resources>
