<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="Principal">
        <menu>
            <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_viagem"
            android:icon="@drawable/ic_menu_viagem"
            android:title="@string/menu_viagem" />
        <item
            android:id="@+id/nav_meus_animais"
            android:icon="@drawable/ic_menu_meu_animais"
            android:title="@string/menu_meus_animais" />
        <item
            android:id="@+id/nav_configuracao"
            android:icon="@drawable/ic_menu_configuracao"
            android:title="@string/menu_configuracao" />
            </group>
        </menu>
    </item>
    <item android:title="Outras ações">
        <menu>
            <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_sair"
            android:title="@string/menu_sair" />
            </group>
        </menu>
    </item>

</menu>
