<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/colorApp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solicitaco_de_viagem"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_margin="4dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/fredoka_one_regular"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endereco_de_origem"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/tv_ruaOrigem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rua_origem"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_numeroOrigem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_origem"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_bairroOrigem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bairro_origem"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_cidadeOrigem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cidade_origem"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_estadoOrigem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado_origem"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_cepOrigem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cep_origem"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold
"
                android:layout_height="wrap_content"
                android:text="@string/endereco_de_destino"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_ruaDestino"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rua_destino"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_numeroDestino"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_destino"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_bairroDestino"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bairro_destino"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_cidadeDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cidade_destino"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_estadoDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado_destino"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_cepDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cep_destino"
                style="@style/Fonte_memor_branca"
                android:textSize="17sp"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_confirmDialog_origemDestino"
                style="@style/Fonte_botao_azul"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/confirmar"
                android:layout_margin="4dp"
                android:background="@drawable/button_verde_seletor"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_cancelDialog_origemDestino"
                style="@style/Fonte_botao_azul"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancelar"
                android:layout_margin="4dp"
                android:background="@drawable/button_vermelho_seletor"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

