<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/bottom_sheet_motorista_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:backgroundTint="@color/colorApp"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<TextView
    android:layout_width="match_parent"
    style="@style/Fonte_botao_azul"
    android:textSize="20sp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/selecione_os_portes_dos_animais_que_deseja_transportar"
    android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp">

        <CheckBox
            android:id="@+id/checkbox_peq"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:buttonTint="@color/colorButtonVerdePadrao"
            android:text="@string/pequeno"
            />

        <CheckBox
            android:id="@+id/checkbox_med"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/medio"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:buttonTint="@color/colorButtonVerdePadrao"
            />

        <CheckBox
            android:id="@+id/checkbox_grd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/grande"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:buttonTint="@color/colorButtonVerdePadrao"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        style="@style/Fonte_botao_azul"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/selecione_o_veiculo_que_ira_utilizar"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_bs_motorista"
        style="@style/Fonte_memor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/bt_bs_motorista"
            style="@style/Fonte_botao_azul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_verde_seletor"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/confirmar_disponibilidade"/>

        <Button
            android:id="@+id/bt_bs_motorista2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/button_vermelho_seletor"
            android:visibility="gone"
            android:text="@string/cancelar"/>

    </LinearLayout>

</LinearLayout>