<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NamespaceTypo">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_viagem"
            android:icon="@drawable/ic_viagem_cinza_24dp"
            android:title="@string/menu_viagem" />
        <item
            android:id="@+id/nav_pagamento"
            android:icon="@drawable/ic_wallet_white_24dp"
            android:title="Carteira" />

        <item
            android:id="@+id/nav_configuracao"
            android:icon="@drawable/ic_configuracao_cinza_24dp"
            android:title="@string/menu_configuracao" />

    </group>

    <item android:title="Comunicação">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contato"
                    android:icon="@drawable/ic_contato_cinza_24dp"
                    android:title="@string/menu_contato" />
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_info_cinza_24dp"
                    android:title="@string/menu_info" />
            </group>
        </menu>
    </item>



</menu>
