<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    tools:context=".controlller.cadastro.cadastroDonoAnimal.CadastroAnimalPorteActivity">

    <RadioGroup
        android:id="@+id/radioGroupPorteAnimal"
        android:layout_width="354dp"
        android:layout_height="179dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/botaoProximo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPorte">

        <RadioButton
            android:id="@+id/radioButtonPequeno"
            style="@style/Fonte_media_branca_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#FFFFFF"
            android:text="@string/pequeno_at_35cm"
            />

        <RadioButton
            android:id="@+id/radioButtonMedio"
            style="@style/Fonte_media_branca_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#FFFFFF"
            android:text="@string/medio_de_36_a_49cm"
            />

        <RadioButton
            android:id="@+id/radioButtonGrande"
            style="@style/Fonte_media_branca_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/white"
            android:text="@string/grande_acima_de_50cm"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewPorte"
        style="@style/Fontetitulo"
        android:layout_width="359dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/selecione_porte_animal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botaoProximo"
        style="@style/Fonte_botao_azul"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@drawable/button_azul_seletor"
        android:onClick="botaoProximo"
        android:text="@string/proximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>