<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageFotoAnimalLista"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/imagem_animal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNomeAnimal"
                style="@style/Fonte_memor_preta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textEspecieAnimal"
                style="@style/Fonte_memor_preta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/especie_"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textRacaAnimal"
                style="@style/Fonte_memor_preta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/raca_"
                android:textAlignment="textStart"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textPorteAnimal"
                style="@style/Fonte_memor_preta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/porte_"
                android:textAlignment="textStart"
                android:textColor="@color/gray"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="0.3dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/fundo_divisor" />
</LinearLayout>